Changing board, cost font, fixing misaligned passive

--- a/style/style.css
+++ b/style/style.css
@@ -243,7 +243,7 @@ section .moves svg {
 /* SVG BLOCKS */
 
 
-textarea, input {
+textarea { /* main_gi: removed "input" */
   border: none;
   background: none;
   border-radius: 7px;
@@ -273,8 +273,10 @@ textarea, input, button{
 }
 input[type=number]{
   width: 3em;
-  -moz-appearance:textfield;
-}/*
+  -moz-appearance: textfield;
+  border: none; background: none; text-align: left; font-family: 'Arial'; font-size: large; font-weight: bold;
+}
+/*
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -315,7 +317,7 @@ ul {
 .passives::before,
 #passives li::before{
   position:absolute;
-  margin-top:4px;
+  margin-top: 7px;
   margin-left: -22px;
 }
 .cost + div > ul p{
@@ -342,7 +344,7 @@ div.passives{
   font-size: 12px;
   font-family: Consolis, evermono, monospac, fallspac;
   font-weight: bold;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.0px;
   line-height: 16px;
   white-space: pre-wrap;
 }
@@ -354,7 +356,7 @@ div.passives{
   font-size: 12px;
   font-family: Consolis, evermono, monospac, fallspac;
   font-weight: bold;
-  letter-spacing: -0.5px;
+  letter-spacing: -0px;
   line-height: 16px;
   white-space: pre-wrap;
 }
@@ -569,7 +571,7 @@ text {
   font-size: 12px;
   font-family: Consolis, evermono, monospac, fallspac;
   font-weight: bold;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.0px;
   white-space: pre-wrap;
 }
 
